* type=rule | introduce new actions=stats-appid-fastapi:-90days/stats-service-fastapi:/stats-address-source-fastapi/stats-address-destination-fastapi/stats-address-fastapi/stats-traffic-fastapi
* type=routing | introduce actions=exporttoexcel:file.html
* type=routing | introduce 'filter=(protocol.bgp is.enabled)'
* type=gcp | introdruce $namespace | improve handling for tenant like togglesvc

BUGFIX:
* class PANConf|VirtualSystem | bugfix to support SharedGateway also for Tag objects correctly
* type=xml-issue | bugfix to display read-only DeviceGroup duplicate address-group fixes correctly in summary
* type=address-merger | bugfix - do not merger address objects if tag count of planned merged object exceeds PAN-OS limit of 64 tag members
* type=address-merger | bugfix for removing tag objects from upper level, if adr merged objects are using them and tag is also available at address level
* bugfix for argument 'location=shared:excludemaindg' on FW config file
* type=schedule | bugfix actions=replacewithobject:OBJECTNAME

GENERAL:
* Class VirtualSystem/SharedGatewayStore | better handling of version variable


2.1.18 (20230920)
BUGFIX:
* type=address/service 'actions=move:shared,skipIfConflict' | bugfix as variable $findSubSystem was not declared for targetlocation 'shared'


2.1.17 (20230920)
UTIL:
* type=certificate | extend to TemplateStack
* introduce class SharedGatewayStore | extend different classes to support SharedGateway
* type=zone | extend with SharedGateway
* type=rule | extend with SharedGateway
* type=service | improvement for SharedGateway - class VirtualSystem
* develop script "shared_gateway.php" | introduction
* type=address in=api://192.168.55.129 'actions=combine-addressgroups:{NEW_GROUP_NAME},true' 'filter=(name regex /{FILTER}/)'
* type=gcp actions=validation | introduction of new action
* type=gcp actions=image-validation | introduction of new action